kubernetes/apps/navidrome/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.64.0@sha256:a384948b81bd1529986c5960169e7fc4fa00f46bde6bd517971a4c36671db2af
          imagePullPolicy: Always
          resources:
            limits:
              cpu: ".5"
              memory: "2Gi"
            requests:
              cpu: "0.1"
              memory: "10M"
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: navidrome-data-volume
              mountPath: /data
            - name: navidrome-music-volume
              mountPath: /music
              subPath: music
          livenessProbe:
            httpGet:
              path: /app
              port: 4533
            initialDelaySeconds: 30
            periodSeconds: 3
            timeoutSeconds: 90
      volumes:
        - name: navidrome-data-volume
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: navidrome-music-volume
          persistentVolumeClaim:
            claimName: music-pvc
