kubernetes/apps/navidrome/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  ports:
    - port: 4533
      name: navidrome
  selector:
    app: navidrome
