kubernetes/apps/navidrome/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533

  tls:
    - hosts:
        - navidrome.leehosanganson.dev
      secretName: navidrome-tls
